force-app/main/default/objects/SendTemplate__c/SendTemplate__c.object-meta.xml
<CustomObject>
    <label>Send Template</label>
    <nameField>
        <label>Send Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Send Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>