force-app/main/default/objects/SendTemplate__c/fields/AdminName__c.field-meta.xml
<CustomField>
    <fullName>AdminName__c</fullName>
    <label>Admin Name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>