force-app/main/default/objects/SendTemplate__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Folder</label>
    <referenceTo>Send_Template_Folder__c</referenceTo>
    <relationshipLabel>Send Templates</relationshipLabel>
    <relationshipName>Send_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>