force-app/main/default/objects/SendTemplate__c/fields/Unlock__c.field-meta.xml
<CustomField>
    <fullName>Unlock__c</fullName>
    <formula>&quot;7434&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unlock</label>
    <type>Text</type>
</CustomField>