force-app/main/default/objects/SendTemplate__c/fields/Unwrapped_Div__c.field-meta.xml
<CustomField>
    <fullName>Unwrapped_Div__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unwrapped Div</label>
    <type>Checkbox</type>
</CustomField>