force-app/main/default/objects/SendTemplate__c/fields/Unwrapped_Message__c.field-meta.xml
<CustomField>
    <fullName>Unwrapped_Message__c</fullName>
    <label>Unwrapped Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>