force-app/main/default/objects/SendTemplate__c/listViews/MINI_templates.listView-meta.xml
<ListView>
    <fullName>MINI_templates</fullName>
    <columns>NAME</columns>
    <columns>Folder__c</columns>
    <columns>Object__c</columns>
    <columns>Language__c</columns>
    <columns>AdminName__c</columns>
    <columns>Unwrapped_Div__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>mini</value>
    </filters>
    <label>MINI templates</label>
</ListView>