force-app/main/default/objects/SendTemplate__c/listViews/Unwrapped.listView-meta.xml
<ListView>
    <fullName>Unwrapped</fullName>
    <columns>NAME</columns>
    <columns>Folder__c</columns>
    <columns>Object__c</columns>
    <columns>Language__c</columns>
    <columns>AdminName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Subject__c</columns>
    <columns>Unwrapped_Div__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unwrapped_Div__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Unwrapped</label>
</ListView>